# learning-haskell

./: LICENSE  fib_pair.hs  ghcid.txt  learning-haskell.cabal  made-from.txt  stack.yaml
src/: AllEven.hs  Backpack.hs  Capitalize.hs  Countdown.hs  CountdownTwo.hs  Double.hs  DrunkenPirate.hs  FactorialWithGuard.hs  FizzBuzz.hs  Fruit.hs  Lists.hs  Main.hs  Monads.hs  MyAeson.hs  MyTry.hs  NewMo.hs  Reverse.hs  Transfer1.hs  all_even.hs  cards-with-show.hs  double.hs  double_with_type.hs  eat_testing.hs  fact_with_guard.hs  fizzBuzz.hs  search.html  transfer.hs
src/STM/: MyTry.hs  MyTry2.hs  misc.hs  stm.hs  transfer.hs
src/beginning-haskell/: Execise2.hs
src/get-programming/: GP01.hs
src/haskell-book/: Reverse.hs  arith2.hs  arith3broken.hs  arith4.hs  ch2.hs  ch3.hs  ch4.hs  ch5.hs  ch6.hs  ch7.hs  ch8.hs  ch9.hs  greetIfCool3.hs  greetIfcool1.hs  greetIfcool2.hs  matchingTuples1.hs  poemLines.hs  registeredUser1.hs  registeredUser2.hs  sing.hs  wordNumber.hs
src/learn-you/ch01/: My01.hs  baby.hs  my01.hs
src/learn-you/ch02/: my02.hs  myTypes.hs
src/learn-you/ch03/: my03.hs
src/learn-you/ch04/: my04.hs
src/learn-you/ch05/: my05.hs
src/learn-you/ch06/: my06.hs
src/learn-you/ch07/: my07.hs
src/learn-you/ch1/: baby.hs
src/seven-langs/: AllEven.hs  Backwards.hs  Cards.hs  Double.hs  DoubleWithType.hs  DrunkenMonad.hs  FibTuple1.hs  FibTuple2.hs  Lists.hs  Map.hs  Tree.hs
src/state/: MyTry2.hs  misc.hs  transfer.hs
