name:                learning-haskell
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/eatobin/learning-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Tobin
maintainer:          eatobin@gmail.com
copyright:           None
category:            None
build-type:          Simple
cabal-version:       >=1.10

executable learning-haskell
  hs-source-dirs:      src
                     , src/learn-you/ch01
  main-is:             Main.hs
  other-modules:       Monads
                     , MyAeson
                     , Capitalize
                     , My01
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , stm
                     , random
                     , aeson
                     , text
                     , transformers
